--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ body {
 }
 
 footer {
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   width: 100%;
-  height: 170px;
+  /* height: 170px; */
 }
