--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,11 @@ html {
 }
 
 body {
-  margin-bottom: 170px;
+  margin-bottom: 170px !important;
 }
 
 footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* height: 170px; */
 }
